[package]
name = "sql-changes"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3.14"
