[package]
name = "sql-changes"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.4.0"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.21"
